# Nexa

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  llms.txt  package.json  server.py
.github/workflows/: ci.yml
docs/: AI_QA.md  AI_QA_SCENARIOS.md  AI_SPEC.md  FORMS.md  MOTION.md  NEXA_UI.md  TUTORIAL.md
docs/benchmarks/: README.md  bundle-esbuild.json  bundle-python.json  components-split-after.json  components-split-before.json
examples/basic/: app.js  index.html  styles.css
examples/burger-shop/: api.js  (+6 more)
examples/burger-shop-fastapi/: .gitignore  README.md  pyproject.toml  run.sh
examples/burger-shop-fastapi/app/: database.py  main.py  models.py  seed.py
examples/burger-shop-fastapi/app/routers/: __init__.py  pedidos.py  produtos.py
examples/burger-shop-fastapi/static/: app.js  index.html
examples/burger-shop-fastapi/static/components/: EmptyMessage.css  PedidoPage.css  PedidoPage.js  StatusBadge.css  StatusBadge.js  ToastCtx.js  TopBar.css  TopBar.js
examples/burger-shop-fastapi/static/components/admin/: AdminPage.css  AdminPedidos.js  AdminProdutos.js
scripts/: benchmark_examples.py  bundle.py  minify.py  run_browser_tests.py  split_css.py  validate_nexa.py
tests/: a11y.test.js  addons.test.js  categories.test.js  components-new.test.js  coverage.test.js  css-route-a.fixture.css  css-route-b.fixture.css  engine.test.js  hooks.test.js  index.html  loadcss.fixture.css  motion-editor.test.js  motion.test.js  new-features.test.js  run.js  runner.js  security.test.js  ssr.test.js  styles.css  v02-features.test.js
tutorials/: README.md
(+542 files in other folders)
