[project]
name = "burguer"
version = "0.1.0"
description = "Sistema de atendimento de hamburgueria"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "python-multipart>=0.0.9",
]

[project.scripts]
start = "uvicorn app.main:app --reload"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
]
